--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -41,6 +41,10 @@ version 28-git (????-??-??):
   - enhancement: added 'phpui.timetable_distant_event_restriction' with selection from 'none' (default),
     'error' and 'warning' values allows to choose restriction type for newly created events with
     too distant begin date [chilan]
+  - enhancement: 'phpui.timetable_hide_deleted_users' with default value of 'false' allow to hide
+    deleted users in user selection list element of event list boxes [chilan]
+  - improvement: lms-ui-multiselect: 'data-blend' attribute of option element causes presentation
+    of corresponding multi select option with blend color [chilan]
 
 version 27.0 (2021-08-20):
 
