enhancement: 'phpui.document_password' supports substitution symbol %pin which is replaced by customer PIN (changelog entry)

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -53,8 +53,8 @@ version 28-git (????-??-??):
   - improvement: 'phpui.promotion_schema_name_limit' with default value of '40' allows to control how
     long schema name can be in schema selection list [chilan]
   - improvement: use {customerlist} smarty element in invoice list form [interduo]
-  - enhancement: 'phpui.document_password' supports substitution symbol %ssn which is replaced
-    by customer SSN [chilan]
+  - enhancement: 'phpui.document_password' supports substitution symbols %ssn and %pin which is replaced
+    (respectively) by customer SSN and PIN [chilan]
   - enhancement: 'phpui.document_protection_command' with default value of
     'qpdf --encrypt %password %password 256 -- %in-file -' allows to specify system command which handles
     pdf file encryption with password defined in 'phpui.document_password' configuration variable [chilan]
