--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -63,6 +63,7 @@ version 28-git (????-??-??):
   - improvement: pagination support for netnodelist [chilan]
   - improvement: 'phpui.netnodelist_pagelimit' controls how many network nodes are displayed on single
     page (unlimited by default) [chilan]
+  - enhancement: added 'node-group' action support in lms-notify.php backend script [chilan]
 
 version 27.0 (2021-08-20):
 
