--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -70,6 +70,7 @@ version 28-git (????-??-??):
     ('rtticketview_before_display' plugin hook introduced) [chilan]
   - improvement: more flexible result returned by SendSMS() function [chilan]
   - enhancement: customer ten filter in invoice report box [chilan]
+  - enhancement: allow to view uploaded files different than image in modal dialog [chilan/interduo]
 
 version 27.0 (2021-08-20):
 
