enhancement: 'documents.allow_past_date' ('true' by default) control if past date are allowed     in date picker fields of document generator and add document forms

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -76,6 +76,8 @@ version 28-git (????-??-??):
   - enhancement: optional document template file attachments can have initial checkbox state
     specified [chilan]
   - enhancement: allow search helpdesk tickets by source [chilan]
+  - enhancement: 'documents.allow_past_date' ('true' by default) control if past date are allowed
+    in date picker fields of document generator and add document forms [chilan]
 
 version 27.0 (2021-08-20):
 
