enhancement: added 'cancelled' and 'bounced' message statuses (changelog entry)

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -86,6 +86,7 @@ version 28-git (????-??-??):
     allowed length of voip account password [chilan]
   - enhancement: 'phpui.promotion_force_at_next_day' with default value 'false' allows to force 'at' day
     calculation such way that it's always next day for activation and settlement of start period [chilan]
+  - enhancement: added 'cancelled' and 'bounced' message statuses [chilan]
 
 version 27.0 (2021-08-20):
 
