--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -99,6 +99,7 @@ version 28-git (????-??-??):
   - enhancement: added new ticket source 'call center' [chilan]
   - improvement: 'phpui.default_node_auth_types' allow to pre-check selected auth types in node add form
     (empty default value) [chilan]
+  - devel/improvement: switched from 'crypt()' usage to 'password_*()' [chilan]
 
 version 27.0 (2021-08-20):
 
