enhancement: allow to search tickets by requestor email and phone number (changelog entry)

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -135,6 +135,7 @@ version 28-git (????-??-??):
   - improvement: allow to optionally hide customer SSN on invoice report [chilan]
   - enhancement: 'vhosts' property in document template definition ('engine' variable) allows
     to overwrite 'engine' properites basing on http vhost name [chilan]
+  - enhancement: allow to search tickets by requestor email and phone number [chilan]
 
 version 27.0 (2021-08-20):
 
