enhancement: added phone billing customer consent support (changelog entry)

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -144,6 +144,7 @@ version 28-git (????-??-??):
   - enhancement: 'timetable.use_event_assignments_for_privacy_flag' ('false' by default) allows to find
     private events by event user assignments [chilan]
   - improvement: document template can enable use trade documents as their reference documents [chilan]
+  - enhancement: added phone billing customer consent support [chilan]
 
 version 27.0 (2021-08-20):
 
