--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -145,6 +145,7 @@ version 28-git (????-??-??):
     private events by event user assignments [chilan]
   - improvement: document template can enable use trade documents as their reference documents [chilan]
   - enhancement: added phone billing customer consent support [chilan]
+  - enhancement: auto-generate billing documents with invoices issued to phone services [chilan]
 
 version 27.0 (2021-08-20):
 
