--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -150,7 +150,7 @@ version 28-git (????-??-??):
   - devel/cleanup: renamed 'phpui.timetable_working_hours_interval' and 'phpui.timetable_working_hours'
     to 'timetable.work_time_step' and 'timetable.work_time_hours' [chilan]
   - devel/cleanup: renamed 'phpui.timetable_allow_past_events' to 'timetable.allow_past_events' [chilan]
-  - devel/cleanup: renamed 'phpui.timetable_overdue_events' to 'timetable.delayed_events' [chilan]
+  - devel/cleanup: renamed 'phpui.timetable_overdue_events' to 'timetable.show_delayed_events' [chilan]
 
 version 27.0 (2021-08-20):
 
